--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,7 @@
 }*/
 
 body {
-  background-image: url(http://i.imgur.com/e4KKshy.jpg);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: 100% 110%;
+  background-color: grey;
 }
 
 
