--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }*/
 
 body {
-  background-color: grey;
+  background-color: white;
 }
 
 
@@ -15,6 +15,11 @@ h1 {
 .box {
   border: 3px solid black;
   height: 150px;
+}
+
+.box img {
+  width: 100%;
+  height: 100%;
 }
 
 #board {
